--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <version>${dcm4cheVersion}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.1</version>
+        </dependency>
+
     </dependencies>
 
 
