add class modifier for dicom object v1

--- a/_docs/config.json
+++ b/_docs/config.json
@@ -1,10 +1,10 @@
 {
 
   "Path": {
-    "Source"       : "d:\\dop\\java\\OHIFGateway\\_docs\\dcm_in\\",
+    "Source"       : "d:\\dop\\java\\OHIFGateway\\_docs\\dcm_in\\PA000000\\",
     "Destination"  : "d:\\dop\\java\\OHIFGateway\\_docs\\dcm_out\\",
-    "Pattern"      : "//{00080060}{00080020}//[{00100010}]-[ID_{00100020}]//{00080018}.dcm",
-    "Personal"     : "d:\\dop\\java\\OHIFGateway\\_docs\\"
+    "Pattern"      : "//{00080060}{00080020}//ST_{0020000D}//SE_{0020000E}//IM_{00080018}.dcm",
+    "Personal"     : "d:\\dop\\java\\OHIFGateway\\_docs\\undo.json"
   },
 
   "Attributes" : [
@@ -16,7 +16,7 @@
 
     {
       "Tag"    : "00080060",
-      "Value"  : "MR",
+      "Value"  : "CT",
       "Action" : "Override"
     },
 
